# can-dash

./: .clang-tidy  .cppcheck  .editorconfig  .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh  qml  run.sh
.ai/: agent_checklist.yaml
.github/workflows/: ci.yml
can-processor/: CMakeLists.txt  main.cpp
can_sim/: engine.py
config/: alarm_rules.yaml  can_ids.yaml  can_signal_status.yaml  candash.dbc  derived_rules.yaml  display_layout.yaml  indicators.yaml  limp_home.yaml  seat_belt.yaml
docs/: DBC_INTEGRATION.md  MISRA-COMPLIANCE.md  MULTI_AGENT_ARCHITECTURE.md  PERFORMANCE.md  SAFETY-ANALYSIS.md
docs/requirements/: INDEX.md  REQ-ALM-003.md  REQ-ALM-004.md  REQ-ALM-005.md  REQ-ALM-007.md  REQ-ALM-012.md  REQ-HYBRID-001.md  REQ-HYBRID-002.md  REQ-HYBRID-003.md  REQ-HYBRID-004.md  REQ-HYBRID-005.md  REQ-IND-001.md  REQ-IND-002.md  REQ-IND-003.md  REQ-IND-004.md  REQ-IND-005.md  REQ-SIG-001.md  REQ-SIG-002.md  REQ-SIG-003.md  REQ-SIG-004.md  REQ-SIG-005.md  REQ-SIG-006.md  REQ-SIG-007.md  REQ-SIG-008.md  REQ-SIG-009.md  REQ-SIG-010.md  REQ-SIG-011.md  REQ-SIG-012.md  REQ-SIG-013.md  REQ-SIG-014.md  REQ-SIG-015.md  REQ-SIG-016.md  REQ-SIG-017.md  REQ-SIG-018.md  REQ-SIG-019.md  REQ-SYS-001.md  REQ-SYS-002.md  REQ-SYS-003.md  REQ-SYS-004.md  REQ-SYS-005.md  (+5 more)
references/: build-troubleshooting.md  can_debug_log_reference.md  can_simulator.md  can_socket_protocol.md  canvas_qml_gauges.md  fix_generated.py  github-setup.md  layer2_static_memory.md  layer2_unit_tests.md  yaml_to_c_bugs.md
schemas/: limp_home.schema.json
src/: main.cpp
src/layer1/: display_data.h
src/layer1/shm/: shm_display.cpp  shm_display.h
src/layer2/: alarm_runtime.cpp  alarm_runtime.h  can_converter.cpp  can_signal_monitor.cpp  can_signal_monitor.h  display_manager.cpp  display_manager.h  event_bus.cpp  event_bus.h  indicator_runtime.cpp  indicator_runtime.h  limp_home_runtime.cpp  limp_home_runtime.h  seat_belt_runtime.cpp  seat_belt_runtime.h  self_test_runtime.cpp  self_test_runtime.h  theme_manager.cpp  theme_manager.h  time_util.cpp  time_util.h  trip_computer.cpp  trip_computer.h  vehicle_logic.cpp  vehicle_logic.h
src/layer2/transport/: can_transport.h  sim_socket_transport.cpp  sim_socket_transport.h  socketcan_transport.cpp  socketcan_transport.h  transport_factory.cpp  transport_factory.h
src/layer3/: dashboard_backend.cpp  dashboard_backend.h  dashboard_backend_qt.cpp  dashboard_backend_qt.h  display_data_types.h  idata_binder.h  idata_source.h  qt_data_binder.cpp  qt_data_binder.h  rule_engine.cpp  rule_engine.h  shm_data_source.cpp  shm_data_source.h
src/ui/: BarIndicator.qml  DashboardMain.qml  GaugeControl.qml  SeatBeltZone.qml  TextDisplay.qml  TripPanel.qml
tests/: mock_data_binder.h  mock_data_source.h  test_can_converter.cpp  test_can_signal_monitor.cpp  test_dashboard_backend.cpp  test_dbc_to_yaml.py  test_display_manager.cpp  test_language_manager.cpp  test_limp_home_runtime.cpp  test_perf_baseline.cpp  test_qt_data_binder.cpp  test_rule_engine.cpp  test_self_test_data_flow.cpp  test_self_test_runtime.cpp  test_shm_data_source.cpp  test_shm_display.cpp  test_theme_manager.cpp  test_time_util.cpp  test_transport.cpp  test_trip_computer.cpp  test_vehicle_logic.cpp
tools/: __init__.py  check_fix_spam.sh  dbc_to_yaml.py  install-hooks.sh  lint_header_guards.sh  qml_generator.py  run_cppcheck.sh  validate.py  yaml_to_c.py
